
include_directories(
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/../src
	${CMAKE_CURRENT_BINARY_DIR}/../src
	)

add_executable(testrunner
	geo/Test_geo_angle.cpp
	geo/Test_geo_greatcircle.cpp
	nmea/Test_nmea.cpp
	nmea/Test_nmea_date.cpp
	nmea/Test_nmea_time.cpp
	nmea/Test_nmea_sentence.cpp
	nmea/Test_nmea_aam.cpp
	nmea/Test_nmea_bod.cpp
	nmea/Test_nmea_dbt.cpp
	nmea/Test_nmea_dpt.cpp
	nmea/Test_nmea_gga.cpp
	nmea/Test_nmea_gll.cpp
	nmea/Test_nmea_gsa.cpp
	nmea/Test_nmea_gsv.cpp
	nmea/Test_nmea_hdg.cpp
	nmea/Test_nmea_mtw.cpp
	nmea/Test_nmea_mwv.cpp
	nmea/Test_nmea_rmb.cpp
	nmea/Test_nmea_rmc.cpp
	nmea/Test_nmea_rte.cpp
	nmea/Test_nmea_vhw.cpp
	nmea/Test_nmea_vlw.cpp
	nmea/Test_nmea_vwr.cpp
	nmea/Test_nmea_vtg.cpp
	nmea/Test_nmea_vdm.cpp
	nmea/Test_nmea_vdo.cpp
	ais/Test_ais.cpp
	ais/Test_ais_message.cpp
	ais/Test_ais_message_01.cpp
	ais/Test_ais_message_02.cpp
	ais/Test_ais_message_03.cpp
	ais/Test_ais_message_05.cpp
	seatalk/Test_seatalk_message.cpp
	seatalk/Test_seatalk_message_00.cpp
	seatalk/Test_seatalk_message_01.cpp
	seatalk/Test_seatalk_message_10.cpp
	seatalk/Test_seatalk_message_11.cpp
	seatalk/Test_seatalk_message_20.cpp
	seatalk/Test_seatalk_message_21.cpp
	seatalk/Test_seatalk_message_22.cpp
	seatalk/Test_seatalk_message_23.cpp
	seatalk/Test_seatalk_message_25.cpp
	seatalk/Test_seatalk_message_27.cpp
	io/Test_io_seatalk_serial.cpp
	io/Test_io_nmea_serial.cpp
	)

target_link_libraries(testrunner
	marnav
	gmock
	pthread
	)

run_unittest(testrunner)

